release 1.3 (06-2010)
- ServiceFinder will defer to the defining class loader of the current class
  if a provider class cannot be loaded from the thread context class loader.
- Changed the declaration of components defined by jersey-multipart to use
  the META-INF/services service interface name to avoid the components being
  output in the logs.
- Fixed issue 488
  https://jersey.dev.java.net/issues/show_bug.cgi?id=488
  When using Apache HTTP client, chunked encoding and jersey-multipart
  it is necessary for the client to explicitly declare the boundary string for 
  the content type. See com.sun.jersey.multipart.Boundary and
  com.sun.jersey.multipart.MultiPartMediaTypes.
  This is due to architectural restrictions with the Apache HTTP client as
  the headers have to be declared before the entity is written.
- Removed support for resource methods utilizing @FormParam and consuming
  "multipart/form-data". This functionality has been replaced by @FormDataParam
  in the jersey-multipart module.
- Fixed issue 531
  https://jersey.dev.java.net/issues/show_bug.cgi?id=531
  WADL generation should not modify the abstract model when @FormParam is
  declared in a resource method parameter and the @Consumes is absent.
- Fixed issue 538
  https://jersey.dev.java.net/issues/show_bug.cgi?id=538
  The reference to the registered application may be injected as follows:
    @Context Application app;
- Upgrade the version of Abdera used in the contribs/jersey-atom-abdera to 1.0.
- Guice integration supports the @Inject binding of common
  JAX-RS and Jersey dependencies such as UriInfo and ExtendedUriInfo.
  Extend from com.sun.jersey.guice.JerseyServletModule, instead of
  com.google.inject.servlet.ServletModule, to register these bindings.
- GlassFish v3 integration
  Instead of one big uber JAR, jersey-gf-bundle.jar, individual Jersey modules 
  are integrated to GlassFish to allow better modularization
  and alignment with non GlassFish environment
- Fixed issue 436